# libSSS

./: CMakeLists.txt  CMakeLists_backup.txt  README.md
osn/: OSNReceiver.cpp  OSNReceiver.h  OSNSender.cpp  OSNSender.h
python/: TestReceiver.py  TestServer.py  libSSS_wrapper.cpp  libSS_wrapper.cpp  pySSSComm.py  pySSSReceiver.py  pySSSSender.py  pySSStest.py  pytest.py
test/: test_osn.cpp
